// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render as "Icon Button" when there are no children but there is an icon 1`] = `
.c0 {
  border: 1px solid transparent;
  font: inherit;
  height: 3.5rem;
  border-radius: 1rem;
  width: 3.5rem;
  background-color: #6C5DD3;
  border-color: #6C5DD3;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  font-size: 0.875rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  -webkit-transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.c0:hover {
  background-color: #4535B7;
  border-color: #4535B7;
}

.c0 .button-icon {
  width: 1.25rem;
}

.c0 .button-icon svg {
  width: 100%;
  height: auto;
}

<button
  class="c0 button button-iconOnly "
  data-testid="test-id"
>
  <span
    class="button-icon"
  >
    <span
      data-testid="test-icon"
    />
  </span>
</button>
`;

exports[`Button should render icons 1`] = `
.c0 {
  border: 1px solid transparent;
  font: inherit;
  height: 3.5rem;
  border-radius: 1rem;
  padding: 0 1.25rem;
  background-color: #6C5DD3;
  border-color: #6C5DD3;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  font-size: 0.875rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  -webkit-transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.c0:hover {
  background-color: #4535B7;
  border-color: #4535B7;
}

.c0 .button-icon {
  width: 1.25rem;
}

.c0 .button-icon svg {
  width: 100%;
  height: auto;
}

.c0 .button-icon {
  margin-right: 0.5rem;
  margin-left: -0.25rem;
}

.c0 .button-icon-right {
  margin-right: -0.25rem;
  margin-left: 0.5rem;
}

<div>
  <button
    class="c0 button  "
  >
    <span
      class="button-icon"
    >
      <span
        data-testid="test-icon"
      />
    </span>
    test-value
  </button>
  <button
    class="c0 button  "
  >
    test-value
    <span
      class="button-icon button-icon-right"
    >
      <span
        data-testid="test-icon-right"
      />
    </span>
  </button>
</div>
`;

exports[`Button should support all appearances 1`] = `
.c0 {
  border: 1px solid transparent;
  font: inherit;
  height: 3.5rem;
  border-radius: 1rem;
  padding: 0 1.25rem;
  background-color: #6C5DD3;
  border-color: #6C5DD3;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  font-size: 0.875rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  -webkit-transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.c0:hover {
  background-color: #4535B7;
  border-color: #4535B7;
}

.c0 .button-icon {
  width: 1.25rem;
}

.c0 .button-icon svg {
  width: 100%;
  height: auto;
}

.c0 .button-icon {
  margin-right: 0.5rem;
  margin-left: -0.25rem;
}

.c0 .button-icon-right {
  margin-right: -0.25rem;
  margin-left: 0.5rem;
}

.c1 {
  border: 1px solid transparent;
  font: inherit;
  height: 3.5rem;
  border-radius: 1rem;
  padding: 0 1.25rem;
  background-color: transparent;
  border-color: transparent;
  color: #11142D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  font-size: 0.875rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  -webkit-transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.c1:hover {
  background-color: #F7F7FD;
  border-color: #F7F7FD;
}

.c1 .button-icon {
  width: 1.25rem;
}

.c1 .button-icon svg {
  width: 100%;
  height: auto;
}

.c1 .button-icon {
  margin-right: 0.5rem;
  margin-left: -0.25rem;
}

.c1 .button-icon-right {
  margin-right: -0.25rem;
  margin-left: 0.5rem;
}

.c2 {
  border: 1px solid transparent;
  font: inherit;
  height: 3.5rem;
  border-radius: 1rem;
  padding: 0 1.25rem;
  background-color: #FF754C;
  border-color: #FF754C;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  font-size: 0.875rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  -webkit-transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.c2:hover {
  background-color: #e1572e;
  border-color: #e1572e;
}

.c2 .button-icon {
  width: 1.25rem;
}

.c2 .button-icon svg {
  width: 100%;
  height: auto;
}

.c2 .button-icon {
  margin-right: 0.5rem;
  margin-left: -0.25rem;
}

.c2 .button-icon-right {
  margin-right: -0.25rem;
  margin-left: 0.5rem;
}

<div>
  <button
    class="c0 button  "
  >
    test-value
  </button>
  <button
    class="c1 button  "
  >
    test-value
  </button>
  <button
    class="c2 button  "
  >
    test-value
  </button>
</div>
`;

exports[`Button should support all sizes 1`] = `
.c0 {
  border: 1px solid transparent;
  font: inherit;
  height: 3.5rem;
  border-radius: 1rem;
  padding: 0 1.25rem;
  background-color: #6C5DD3;
  border-color: #6C5DD3;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  font-size: 0.875rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  -webkit-transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.c0:hover {
  background-color: #4535B7;
  border-color: #4535B7;
}

.c0 .button-icon {
  width: 1.25rem;
}

.c0 .button-icon svg {
  width: 100%;
  height: auto;
}

.c0 .button-icon {
  margin-right: 0.5rem;
  margin-left: -0.25rem;
}

.c0 .button-icon-right {
  margin-right: -0.25rem;
  margin-left: 0.5rem;
}

.c1 {
  border: 1px solid transparent;
  font: inherit;
  height: 2.5rem;
  border-radius: 0.75rem;
  padding: 0 0.75rem;
  background-color: #6C5DD3;
  border-color: #6C5DD3;
  color: #FFFFFF;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  font-size: 0.875rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  -webkit-transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  transition: background-color 200ms ease 0ms,box-shadow 200ms ease 0ms,border 200ms ease 0ms,color 200ms ease 0ms;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}

.c1:hover {
  background-color: #4535B7;
  border-color: #4535B7;
}

.c1 .button-icon {
  width: 1.25rem;
}

.c1 .button-icon svg {
  width: 100%;
  height: auto;
}

.c1 .button-icon {
  margin-right: 0.5rem;
  margin-left: -0.25rem;
}

.c1 .button-icon-right {
  margin-right: -0.25rem;
  margin-left: 0.5rem;
}

<div>
  <button
    class="c0 button  "
  >
    test-value
  </button>
  <button
    class="c1 button  "
  >
    test-value
  </button>
</div>
`;
